LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -12934,7 +12934,7 @@ search-colon=検索:
 search-container=検索コンテナ
 search-container-help=検索コンテナの値（合計結果数など）を取得するためのヘルパーメソッドにアクセスします。
 search-content=検索コンテンツ
-search-context-attributes=コンテキスト属性を検索
+search-context-attributes=検索コンテキストの属性
 search-context-attributes-description=これらの属性はこのプレビュー内の結果のみに影響し、ブループリント構成には保存されません。
 search-coupons=クーポンの検索
 search-custom-range-date-format=日付を次のように入力してください：YYYY-MM-DD
